--- a/me.mhaeuser.batterytoolkitd/Info.plist
+++ b/me.mhaeuser.batterytoolkitd/Info.plist
@@ -3,12 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>$(BT_HELPER_NAME)</string>
+	<string>me.mhaeuser.batterytoolkitd</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier &quot;$(BT_APP_NAME)&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;$(BT_CODE_SIGN_CN)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 		<string>identifier &quot;$(BT_SERVICE_NAME)&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;$(BT_CODE_SIGN_CN)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 	</array>
 </dict>
