Enable CG backtrace when running

--- a/BatteryToolkit.xcodeproj/xcshareddata/xcschemes/BatteryToolkit.xcscheme
+++ b/BatteryToolkit.xcodeproj/xcshareddata/xcschemes/BatteryToolkit.xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:BatteryToolkit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CG_CONTEXT_SHOW_BACKTRACE"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
