--- a/me.mhaeuser.batterytoolkitd/launchd.plist
+++ b/me.mhaeuser.batterytoolkitd/launchd.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ProcessType</key>
-	<string>Background</string>
+	<key>AssociatedBundleIdentifiers</key>
+	<string>me.mhaeuser.BatteryToolkit</string>
 	<key>Label</key>
 	<string>me.mhaeuser.batterytoolkitd</string>
 	<key>RunAtLoad</key>
