Separate batterytoolkitd and batterytoolkitlegacy labelsd

--- a/me.mhaeuser.batterytoolkitd/launchd.plist
+++ b/me.mhaeuser.batterytoolkitd/launchd.plist
@@ -9,7 +9,7 @@
 	<key>AssociatedBundleIdentifiers</key>
 	<string>me.mhaeuser.BatteryToolkit</string>
 	<key>Label</key>
-	<string>me.mhaeuser.batterytoolkitd</string>
+	<string>me.mhaeuser.batterytoolkitlegacyd</string>
 	<key>RunAtLoad</key>
 	<true/>
 	<key>MachServices</key>
