--- a/me.mhaeuser.batterytoolkitd/me.mhaeuser.batterytoolkitd.plist
+++ b/me.mhaeuser.batterytoolkitd/me.mhaeuser.batterytoolkitd.plist
@@ -7,7 +7,7 @@
 	<key>KeepAlive</key>
 	<true/>
 	<key>BundleProgram</key>
-	<string>Contents/XPCServices/BatteryToolkitXPC.xpc/Contents/Library/LaunchServices/me.mhaeuser.batterytoolkitd</string>
+	<string>Contents/Library/LaunchServices/me.mhaeuser.batterytoolkitd</string>
 	<key>Label</key>
 	<string>me.mhaeuser.batterytoolkitd</string>
 	<key>RunAtLoad</key>
