Redesign daemon exit to be minimal and not relaunch when unsupported

--- a/me.mhaeuser.batterytoolkitd/launchd.plist
+++ b/me.mhaeuser.batterytoolkitd/launchd.plist
@@ -11,7 +11,10 @@
 	<key>Label</key>
 	<string>me.mhaeuser.batterytoolkitd</string>
 	<key>RunAtLoad</key>
-	<true/>
+	<dict>
+		<key>SuccessfulExit</key>
+		<false/>
+	</dict>
 	<key>MachServices</key>
 	<dict>
 		<key>me.mhaeuser.batterytoolkitd</key>
