Prefix daemon name with team ID as per app group requirements

--- a/BatteryToolkit/BatteryToolkit.entitlements
+++ b/BatteryToolkit/BatteryToolkit.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>me.mhaeuser</string>
+		<string>EMH49F8A2Y.me.mhaeuser</string>
 	</array>
 </dict>
 </plist>
