--- a/EMH49F8A2Y.me.mhaeuser.batterytoolkitd/Info.plist
+++ b/EMH49F8A2Y.me.mhaeuser.batterytoolkitd/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>me.mhaeuser.batterytoolkitd</string>
+	<string>EMH49F8A2Y.me.mhaeuser.batterytoolkitd</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>SMAuthorizedClients</key>
