--- a/EMH49F8A2Y.me.mhaeuser.batterytoolkitd/launchd.plist
+++ b/EMH49F8A2Y.me.mhaeuser.batterytoolkitd/launchd.plist
@@ -9,15 +9,15 @@
 		<key>SuccessfulExit</key>
 		<false/>
 	</dict>
-	<key>BundleProgram</key>
-	<string>Contents/Library/LaunchServices/me.mhaeuser.batterytoolkitd</string>
+	<key>AssociatedBundleIdentifiers</key>
+	<string>me.mhaeuser.BatteryToolkit</string>
 	<key>Label</key>
-	<string>me.mhaeuser.batterytoolkitd</string>
+	<string>EMH49F8A2Y.me.mhaeuser.batterytoolkitd</string>
 	<key>RunAtLoad</key>
 	<true/>
 	<key>MachServices</key>
 	<dict>
-		<key>me.mhaeuser.batterytoolkitd</key>
+		<key>EMH49F8A2Y.me.mhaeuser.batterytoolkitd</key>
 		<true/>
 	</dict>
 </dict>
