--- a/BatteryToolkit.xcodeproj/xcshareddata/xcschemes/Battery Toolkit.xcscheme
+++ b/BatteryToolkit.xcodeproj/xcshareddata/xcschemes/Battery Toolkit.xcscheme
@@ -39,7 +39,9 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      enableGPUFrameCaptureMode = "3"
+      enableGPUShaderValidationMode = "2"
+      allowLocationSimulation = "NO">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
