Rename Xcode project to "Battery Toolkit"

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-BatteryToolkit.xcodeproj/xcuserdata/*
+Battery Toolkit.xcodeproj/xcuserdata/
+Battery Toolkit.xcodeproj/project.xcworkspace/xcuserdata/
