--- a/me.mhaeuser.batterytoolkitd/me.mhaeuser.batterytoolkitd.plist
+++ b/me.mhaeuser.batterytoolkitd/me.mhaeuser.batterytoolkitd.plist
@@ -10,9 +10,9 @@
 		<false/>
 	</dict>
 	<key>BundleProgram</key>
-	<string>Contents/Library/LaunchServices/EMH49F8A2Y.me.mhaeuser.batterytoolkitd</string>
+	<string>Contents/Library/LaunchServices/me.mhaeuser.batterytoolkitd</string>
 	<key>Label</key>
-	<string>EMH49F8A2Y.me.mhaeuser.batterytoolkitd</string>
+	<string>me.mhaeuser.batterytoolkitd</string>
 	<key>RunAtLoad</key>
 	<true/>
 	<key>EnableTransactions</key>
